--- a/index.css
+++ b/index.css
@@ -169,20 +169,17 @@ body {
 #temperature {
 
     display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     font-size: 94px;
     font-family: "Roboto", sans-serif;
     color: #F2F2F2;
     font-weight: 700;
+    padding-left: 40px;
 
 }
 
-#temperature2 {
-
- 
-
-
-}
 
 #date {
 
